syntax = "proto3";
package beads.v1;
option go_package = "github.com/groblegark/kbeads/gen/beads/v1;beadsv1";

import "beads/v1/beads.proto";
import "beads/v1/config.proto";

// HealthRequest is an empty request for the health check.
message HealthRequest {}

// HealthResponse returns the service health status.
message HealthResponse {
  string status = 1;
}

// BeadsService provides RPCs for managing beads.
service BeadsService {
  rpc CreateBead(CreateBeadRequest) returns (CreateBeadResponse);
  rpc GetBead(GetBeadRequest) returns (GetBeadResponse);
  rpc ListBeads(ListBeadsRequest) returns (ListBeadsResponse);
  rpc UpdateBead(UpdateBeadRequest) returns (UpdateBeadResponse);
  rpc CloseBead(CloseBeadRequest) returns (CloseBeadResponse);
  rpc DeleteBead(DeleteBeadRequest) returns (DeleteBeadResponse);
  rpc AddDependency(AddDependencyRequest) returns (AddDependencyResponse);
  rpc RemoveDependency(RemoveDependencyRequest) returns (RemoveDependencyResponse);
  rpc GetDependencies(GetDependenciesRequest) returns (GetDependenciesResponse);
  rpc AddLabel(AddLabelRequest) returns (AddLabelResponse);
  rpc RemoveLabel(RemoveLabelRequest) returns (RemoveLabelResponse);
  rpc GetLabels(GetLabelsRequest) returns (GetLabelsResponse);
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc ListConfigs(ListConfigsRequest) returns (ListConfigsResponse);
  rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}
